# data-engineer-challenge

./: .gitignore  NOTES.md  README.md  enrich_data.py  generate_report.py  pyproject.toml
.github/: dependabot.yaml
data_engineer_challenge/: __init__.py  converters.py  db.py  enrich.py  report.py
tests/: conftest.py  test_converters.py  test_db.py  test_enrich.py  test_report.py
