[tool.poetry]
name = "data-engineer-challenge"
version = "0.1.0"
description = ""
authors = ["Keat Tang <keat@propelleraero.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
